# C-Star

./: .gitignore  pyproject.toml
ci/: environment.yml
ci/containers/: Makefile  build.sh
ci/containers/mockroms/: Containerfile  mockroms.sh  mpirun
ci/containers/mpi-4.1.4/: Containerfile
ci/containers/mpi-4.1.6/: Containerfile
ci/containers/mpi-5.0.7/: Containerfile
ci/containers/mpi-reference/: Containerfile
ci/containers/orchestrator/app/: README.md  orchestrator.py  run.sh
ci/docker/: Makefile  build  build.sh
ci/docker/archive/ifx/: Dockerfile
ci/docker/archive/mpi/: Dockerfile
ci/docker/archive/mpich-4.2.2/: Dockerfile
ci/docker/archive/roms-ifx/: Dockerfile
ci/docker/archive/roms-marbl-ifx/: Dockerfile
ci/docker/archive/worker/: Dockerfile
ci/docker/archive/worker-ifx/: Dockerfile
ci/docker/buildbase/: Dockerfile
ci/docker/condabase/: Dockerfile
ci/docker/hdf5/: Dockerfile
ci/docker/ifx/: Dockerfile
ci/docker/mpi/: Dockerfile
ci/docker/mpi-5.0.7/: Dockerfile
ci/docker/mpich-4.2.2/: Dockerfile
ci/docker/netcdf/: Dockerfile
ci/docker/roms/: Dockerfile
ci/docker/roms-gcc/: Dockerfile
ci/docker/roms-marbl/: Dockerfile
ci/docker/roms-marbl-gcc/: Dockerfile
ci/docker/runner/: Dockerfile
ci/docker/worker/: Dockerfile
ci/docker/worker-ifx/: Dockerfile
cstar/: simulation.py
cstar/additional_files/templates/: blueprint.yaml  workplan.yaml
cstar/base/: additional_code.py  discretization.py  env.py  external_codebase.py  input_dataset.py  utils.py
cstar/cli/: cli.py  command.py  core.py  handler.py
cstar/cli/blueprint/: __init__.py  blueprint.py  check.py  run.py  template.py
cstar/cli/blueprint/actions/: check.py
cstar/cli/template/actions/: template.py
cstar/cli/workplan/: __init__.py  check.py  plan.py  run.py  template.py  workplan.py
cstar/cli/workplan/actions/: check.py  plan.py
cstar/entrypoint/: service.py
cstar/entrypoint/cli/: check_model.py  plan.py
cstar/entrypoint/worker/: worker.py
cstar/execution/: scheduler_job.py
cstar/io/: retriever.py  source_data.py  staged_data.py  stager.py
cstar/marbl/: external_codebase.py
cstar/orchestration/: adapter.py  dag_runner.py  models.py  orchestration.py  orchestrator.py  planning.py  serialization.py  transforms.py  utils.py
cstar/orchestration/launch/: slurm.py
cstar/orchestration/tasks/: allocation.py  blueprint.py  core.py  plan.py  request.py  response.py  simulation.py  status.py  submission.py  system.py  workplan.py
cstar/roms/: __init__.py  external_codebase.py  input_dataset.py  runtime_settings.py  simulation.py
cstar/system/: environment.py  scheduler.py
cstar/tests/: conftest.py
cstar/tests/integration_tests/: test_cstar_test_blueprints.py
cstar/tests/unit_tests/: conftest.py  fake_abc_subclasses.py  test_simulation.py
docs/: blueprints.rst
docs/howto_guides/: 1_working_with_additionalcode.ipynb  2_working_with_inputdatasets.ipynb  3_working_with_externalcodebases.ipynb  4_running_on_personal_computers.ipynb  5_handling_jobs_on_hpc_systems.ipynb
docs/releases/: v0.2.x.rst
docs/tutorials/: 1_building_a_simulation_and_exporting_it_as_a_blueprint.ipynb  2_importing_and_running_a_simulation_from_a_blueprint.ipynb  3_restarting_and_continuing_a_simulation.ipynb
examples/: cstar_example.py  cstar_example_notebook.ipynb
(+32 files in other folders)
